refactoring language selector

--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -168,15 +168,7 @@
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						<li class="dropdown">
-	                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><img th:src="${@languageUtil.getImageLanguageIconPath()}" /></a>
-	                        <ul class="dropdown-menu" role="menu" th:with="urlBuilder=${T(org.springframework.web.servlet.support.ServletUriComponentsBuilder).fromCurrentRequest()}">
-	                            <li><a th:href="${urlBuilder.replaceQueryParam('lang', 'de').toUriString()}" class="language"><img src="/images/lang/de.png" th:text="' '+#{language.de}" /></a></li>
-	                            <li><a th:href="${urlBuilder.replaceQueryParam('lang', 'en').toUriString()}" class="language"><img src="/images/lang/en.png" th:text="' '+#{language.en}" /></a></li>
-	                            <li><a th:href="${urlBuilder.replaceQueryParam('lang', 'pl').toUriString()}" class="language"><img src="/images/lang/pl.png" th:text="' '+#{language.pl}" /></a></li>
-								<li><a th:href="${urlBuilder.replaceQueryParam('lang', 'es').toUriString()}" class="language"><img src="/images/lang/es.png" th:text="' '+#{language.es}" /></a></li>
-								<li><a th:href="${urlBuilder.replaceQueryParam('lang', 'ca').toUriString()}" class="language"><img src="/images/lang/ca.png" th:text="' '+#{language.ca}" /></a></li>
-								<li><a th:href="${urlBuilder.replaceQueryParam('lang', 'sv').toUriString()}" class="language"><img src="/images/lang/sv.png" th:text="' '+#{language.sv}" /></a></li>
-	                        </ul>
+							<div th:replace="~{fragments/language_selector :: language_selector('dropdown-toggle')}"></div>
 	                    </li>
 						<li class="dropdown" th:classappend="${pageState_profile}">
 							<a href="#" th:inline="text" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
