--- a/src/main/resources/templates/admin/lastlogins.html
+++ b/src/main/resources/templates/admin/lastlogins.html
@@ -8,16 +8,16 @@
 		<div layout:fragment="content">
 			<div th:replace="~{fragments/alert :: alert_headline}"></div>
 			<h1 th:text="#{lastlogins.title}"></h1>
-			<div class="col-xs-12 col-sm-6 col-md-4">			
-				<div class="row" th:each="appUser : ${userList}">
-					<div class="panel panel-default">					
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4" th:each="appUser : ${userList}">
+					<div class="panel panel-default">
 						<div class="panel-heading">
 							<span th:text="${appUser.username}"></span>
 							<span class="right" th:text="${#temporals.format(appUser.lastLogin, #messages.msg('app.dateformatWithSeconds'))}"></span>
-					   </div>					   
-					</div>			
-				</div>		
-			</div>		
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
