--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -43,13 +43,13 @@
                     <div class="col-xs-12 col-sm-6 col-md-4" th:each="bet : ${allBetsCommand.allBetsForMatch}">
                         <div class="panel panel-default">
                             <div class="panel-body result-item">
-                                <div class="col-xs-2 top-bottom-space">
+                                <div class="col-xs-2 top-bottom-space no-right-padding">
                                     <span th:replace="~{fragments/profile_image :: profile_image_small_with_popup(${@webSecurityUtil.getUserProfileImageKeyFor(bet.userName)})}"></span>
                                 </div>
                                 <div class="col-xs-5 top-bottom-space no-left-right-padding">
                                     <span th:text="${bet.userName}" class="ranking-name"></span>
                                 </div>
-                                <div class="col-xs-5 top-bottom-space">
+                                <div class="col-xs-5 top-bottom-space no-left-padding">
                                     <div class="right">
                                         <span class="label label-as-badge big-badge label-success" th:classappend="${bet.getCssClassPenaltyWinnerOne()}"
                                             th:text="${bet.goalsTeamOne}"></span>
