webjars locator not working

--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -8,10 +8,10 @@
 		
 		<link rel="shortcut icon" th:href="@{/favicon.ico}" />
 
-		<link rel="stylesheet" th:href="@{/webjars/font-awesome/css/fontawesome.min.css}" />
-		<link rel="stylesheet" th:href="@{/webjars/font-awesome/css/brands.min.css}" />
-		<link rel="stylesheet" th:href="@{/webjars/font-awesome/css/solid.min.css}" />
-		<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
+		<link rel="stylesheet" th:href="@{/webjars/font-awesome/5.12.0/css/fontawesome.min.css}" />
+		<link rel="stylesheet" th:href="@{/webjars/font-awesome/5.12.0/css/brands.min.css}" />
+		<link rel="stylesheet" th:href="@{/webjars/font-awesome/5.12.0/css/solid.min.css}" />
+		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.4.1/css/bootstrap.min.css}" />
 		<link rel="stylesheet" th:href="${@runtimeSettingsUtil.getSettings().getBootswatchThemeUrl()}" />
 		<link rel="stylesheet" th:href="@{/lightbox/css/lightbox.min.css}" />
 		<link rel="stylesheet" th:href="@{/css/custom.css}" />
@@ -23,9 +23,9 @@
 			<div layout:fragment="content" th:remove="tag">Content Placeholder</div>
 		</div>
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-		<script type="text/javascript" th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-		<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+		<script type="text/javascript" th:src="@{/webjars/jquery/3.6.1/jquery.min.js}"></script>
+		<script type="text/javascript" th:src="@{/webjars/popper.js/1.16.0/umd/popper.min.js}"></script>
+		<script type="text/javascript" th:src="@{/webjars/bootstrap/3.4.1/js/bootstrap.min.js}"></script>
 		<script type="text/javascript" th:src="@{/js/bootstrap-confirmation.min.js}"></script>
 		<script type="text/javascript" th:src="@{/lightbox/js/lightbox.min.js}"></script>
 
