--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,8 +3,8 @@
       layout:decorate="~{_layout}">
 <head>
     <title th:text="#{login.title}"></title>
-    <link rel="stylesheet" th:href="@{/css/bootstrap-toggle.min.css}"/>
-    <link rel="stylesheet" th:href="@{/css/login.css}"/>
+    <link rel="stylesheet" th:href="@{css/bootstrap-toggle.min.css}"/>
+    <link rel="stylesheet" th:href="@{css/login.css}"/>
 </head>
 <body>
 <div layout:fragment="content">
@@ -64,7 +64,7 @@
 </div>
 </body>
 <th:block layout:fragment="scripts">
-    <script type="text/javascript" th:src="@{/js/bootstrap-toggle.min.js}"></script>
-    <script type="text/javascript" th:src="@{/js/pages/tooltip.js}" charset="UTF-8"></script>
+    <script type="text/javascript" th:src="@{js/bootstrap-toggle.min.js}"></script>
+    <script type="text/javascript" th:src="@{js/pages/tooltip.js}" charset="UTF-8"></script>
 </th:block>
 </html>
