--- a/src/main/resources/templates/fragments/language_selector.html
+++ b/src/main/resources/templates/fragments/language_selector.html
@@ -2,14 +2,16 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 	<div th:fragment="language_selector(classes)" th:remove="tag">
-		<a href="#" th:class="${classes}" data-toggle="dropdown" role="button" aria-expanded="false"><img th:src="${@languageUtil.getImageLanguageIconPath()}" /></a>
-		<ul class="dropdown-menu" role="menu" th:with="urlBuilder=${T(org.springframework.web.servlet.support.ServletUriComponentsBuilder).fromCurrentRequest()}">
-			<li><a th:href="${urlBuilder.replaceQueryParam('lang', 'de').toUriString()}" class="language"><img src="/images/lang/de.png" th:text="' '+#{language.de}" /></a></li>
-			<li><a th:href="${urlBuilder.replaceQueryParam('lang', 'en').toUriString()}" class="language"><img src="/images/lang/en.png" th:text="' '+#{language.en}" /></a></li>
-			<li><a th:href="${urlBuilder.replaceQueryParam('lang', 'pl').toUriString()}" class="language"><img src="/images/lang/pl.png" th:text="' '+#{language.pl}" /></a></li>
-			<li><a th:href="${urlBuilder.replaceQueryParam('lang', 'es').toUriString()}" class="language"><img src="/images/lang/es.png" th:text="' '+#{language.es}" /></a></li>
-			<li><a th:href="${urlBuilder.replaceQueryParam('lang', 'ca').toUriString()}" class="language"><img src="/images/lang/ca.png" th:text="' '+#{language.ca}" /></a></li>
-			<li><a th:href="${urlBuilder.replaceQueryParam('lang', 'sv').toUriString()}" class="language"><img src="/images/lang/sv.png" th:text="' '+#{language.sv}" /></a></li>
+		<a href="#" th:class="${classes}" data-toggle="dropdown" role="button" aria-expanded="false">
+			<img th:src="${@languageUtil.getImageLanguageIconPath()}" />
+		</a>
+		<ul class="dropdown-menu" role="menu">
+			<li><a th:href="${@languageUtil.buildUrl('de')}" class="language"><img src="/images/lang/de.png" th:text="' '+#{language.de}" /></a></li>
+			<li><a th:href="${@languageUtil.buildUrl('en')}" class="language"><img src="/images/lang/en.png" th:text="' '+#{language.en}" /></a></li>
+			<li><a th:href="${@languageUtil.buildUrl('pl')}" class="language"><img src="/images/lang/pl.png" th:text="' '+#{language.pl}" /></a></li>
+			<li><a th:href="${@languageUtil.buildUrl('es')}" class="language"><img src="/images/lang/es.png" th:text="' '+#{language.es}" /></a></li>
+			<li><a th:href="${@languageUtil.buildUrl('ca')}" class="language"><img src="/images/lang/ca.png" th:text="' '+#{language.ca}" /></a></li>
+			<li><a th:href="${@languageUtil.buildUrl('sv')}" class="language"><img src="/images/lang/sv.png" th:text="' '+#{language.sv}" /></a></li>
 		</ul>
 	</div>
 </body>
