--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -165,7 +165,7 @@
 						  			<a href="#backup" th:href="@{/backup/show}" th:text="#{navigation.backup}"></a>
 					  			</li>
 								<li th:if="${@runtimeSettingsUtil.isH2ConsoleEnabled()}" sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
-									<a class="dropdown-item" th:href="@{/h2}" target="_blank">H2 Console</a>
+									<a class="dropdown-item" th:href="${@webSecurityUtil.resolveH2Path()}" target="_blank">H2 Console</a>
 								</li>
 				        	</ul>
 				        </li>
