--- a/src/main/resources/templates/image/image_upload.html
+++ b/src/main/resources/templates/image/image_upload.html
@@ -25,6 +25,8 @@
 						<div class="form-group">
 							<label th:text="#{image.upload.file}"></label><br/>
 					    	<input id="upload" type="file" accept="image/jpeg"/>
+						</div>
+						<div class="form-group">
 							<input id="myFileBase64" type="hidden" name="myFileBase64" value="" />
 							<img id="preview" class="img-responsive"/>
 						</div>
