--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -51,7 +51,7 @@ body {
 }
 
 .goal_padding {
-	padding-top: 0px;
+	padding-top: 0;
 	padding-bottom: 5px;
 }
 
@@ -61,21 +61,21 @@ body {
 }
 
 .no-left-right-padding {
-	padding-left: 0px;
-	padding-right: 0px;
+	padding-left: 0;
+	padding-right: 0;
 }
 
 .goal-badges {
 	padding-left: 8px;
-	padding-right: 0px;
+	padding-right: 0;
 }
 
 .no-left-padding {
-	padding-left: 0px;
+	padding-left: 0;
 }
 
 .no-right-padding {
-	padding-right: 0px;
+	padding-right: 0;
 }
 
 .text-left {
