--- a/src/main/resources/templates/profile/change_password.html
+++ b/src/main/resources/templates/profile/change_password.html
@@ -14,17 +14,17 @@
 				<div class="col-xs-12 col-sm-6 col-md-4">										
 					<div class="form-group">
 						<label for="oldPassword" th:text="#{userprofile.changePassword.oldPassword} + ':'"></label> 
-						<input type="password" th:field="*{oldPassword}" class="form-control" />
+						<input id="oldPassword" type="password" th:field="*{oldPassword}" class="form-control" />
 						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('oldPassword')}" th:errors="*{oldPassword}">oldPassword error</p>
 					</div>
 					<div class="form-group">
 						<label for="newPassword" th:text="#{userprofile.changePassword.newPassword} + ':'"></label> 
-						<input type="password" th:field="*{newPassword}" class="form-control" />
+						<input id="newPassword" type="password" th:field="*{newPassword}" class="form-control" />
 						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}">newPasswordRepeat error</p>
 					</div>
 					<div class="form-group">
 						<label for="newPasswordRepeat" th:text="#{userprofile.changePassword.newPasswordRepeat} + ':'"></label> 
-						<input type="password" th:field="*{newPasswordRepeat}" class="form-control" />
+						<input id="newPasswordRepeat" type="password" th:field="*{newPasswordRepeat}" class="form-control" />
 						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('newPasswordRepeat')}" th:errors="*{newPasswordRepeat}">newPasswordRepeat error</p>
 					</div>
 					<div class="form-group">
