--- a/src/main/resources/static/css/print.css
+++ b/src/main/resources/static/css/print.css
@@ -153,7 +153,7 @@
 		margin-left: 8.33333333%;
 	}
 	.col-sm-offset-0 {
-		margin-left: 0%;
+		margin-left: 0;
 	}
 	.visible-xs {
 		display: none !important;
