--- a/src/main/resources/templates/bet/extra_bets.html
+++ b/src/main/resources/templates/bet/extra_bets.html
@@ -56,7 +56,7 @@
 					<div class="panel panel-default">
 						<div class="panel-heading">
 							<span class="bold" th:text="#{extra_bets.reachedPoints} + ':'"></span>
-							<span class="right label label-as-badge big-badge" th:classappend="${extraBetCommand.points != null} ? label-warning : label-default"
+							<span class="right label label-as-badge big-badge" th:classappend="${extraBetCommand.points != null} ? 'label-warning' : 'label-default'"
 								  th:text="${extraBetCommand.points != null ? extraBetCommand.points : '?'}"></span>
 						</div>
 					</div>
