--- a/src/main/resources/templates/profile/change_username.html
+++ b/src/main/resources/templates/profile/change_username.html
@@ -12,7 +12,7 @@
 					<div class="col-xs-12 col-sm-6 col-md-4">
 						<div class="form-group">
 							<label for="newUsername" th:text="#{userprofile.changeUsername.newUsername} + ':'"></label> 
-							<input type="text" th:field="*{newUsername}" class="form-control" size="12" maxlength="12"/>
+							<input id="newUsername" type="text" th:field="*{newUsername}" class="form-control" size="12" maxlength="12"/>
 							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('newUsername')}" th:errors="*{newUsername}">newUsername error</p>
 						</div>					
 						<div class="form-group">
