--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -18,6 +18,7 @@
 	<body>
 		<nav th:replace="~{_navigation :: menu}"></nav>
 		<div class="container" role="main">
+			<div th:replace="~{fragments/alert :: alert_headline}"></div>
 			<div layout:fragment="content" th:remove="tag">Content Placeholder</div>
 		</div>
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
