--- a/src/main/resources/templates/fragments/language_selector.html
+++ b/src/main/resources/templates/fragments/language_selector.html
@@ -11,6 +11,7 @@
 			<li><a th:href="${@languageUtil.buildUrl('pl')}" class="language"><img src="/images/lang/pl.png" th:text="' '+#{language.pl}" /></a></li>
 			<li><a th:href="${@languageUtil.buildUrl('es')}" class="language"><img src="/images/lang/es.png" th:text="' '+#{language.es}" /></a></li>
 			<li><a th:href="${@languageUtil.buildUrl('ca')}" class="language"><img src="/images/lang/ca.png" th:text="' '+#{language.ca}" /></a></li>
+			<li><a th:href="${@languageUtil.buildUrl('cze')}" class="language"><img src="/images/lang/cze.png" th:text="' '+#{language.cze}" /></a></li>
 			<li><a th:href="${@languageUtil.buildUrl('sv')}" class="language"><img src="/images/lang/sv.png" th:text="' '+#{language.sv}" /></a></li>
 		</ul>
 	</div>
