update layout and optimized matchday winner

--- a/src/main/resources/templates/ranking/list.html
+++ b/src/main/resources/templates/ranking/list.html
@@ -43,7 +43,7 @@
                             </div>
                             <div class="col-xs-6 no-left-padding no-right-padding">
                                 <span class="ranking-name" th:text="${ranking.userName}"></span>
-                                <span th:if="${ranking.topTipperOfToday}" class="fas fa-grin-stars" aria-hidden="true" data-toggle="tooltip" data-placement="top"
+                                <span th:if="${ranking.topTipperOfToday}" class="fas fa-grin-stars text-primary" aria-hidden="true" data-toggle="tooltip" data-placement="top"
                                       th:title="#{ranking.topTipperOfToday.tooltip}"></span>
                             </div>
                             <div class="col-xs-2 no-left-padding no-right-padding">
