--- a/src/main/resources/templates/admin/runtime_settings.html
+++ b/src/main/resources/templates/admin/runtime_settings.html
@@ -2,39 +2,39 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorate="~{_layout}">
 	<head>
-		<title th:text="#{administration.config.title}"></title>		
+		<title th:text="#{administration.config.title}"></title>
 	</head>
 	<body>
 		<div layout:fragment="content">
 			<h1 th:text="#{administration.runtime.configuration}"></h1>
 			<form id="saveRuntimeSettingsForm" th:action="@{/runtimesettings/saveRuntimeSettings}" th:object="${runtimeSettingsCommand}" action="#" method="post" role="form">
-				<div class="row">			
+				<div class="row">
 					<div class="col-xs-12 col-sm-6">
 						<h2 th:text="#{administration.runtime.configuration.misc}"></h2>
 						<ul class="list-group">
-							<li class="list-group-item">								
+							<li class="list-group-item">
 								<input id="enabledParentChildRanking" type="checkbox" th:field="*{runtimeSettings.enabledParentChildRanking}"/>
 								<label for="enabledParentChildRanking" th:text="#{administration.runtime.configuration.enabledParentChildRanking}"></label>
-								<span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
-								th:title="#{administration.runtime.configuration.enabledParentChildRanking.tooltip}"></span>								
+								<span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top"
+								th:title="#{administration.runtime.configuration.enabledParentChildRanking.tooltip}"></span>
 							</li>
-							<li class="list-group-item">									
+							<li class="list-group-item">
 								<input id="enableChangingUsername" type="checkbox" th:field="*{runtimeSettings.enableChangingUsername}"/>
 								<label for="enableChangingUsername" th:text="#{administration.runtime.configuration.enableChangingUsername}"></label>
-								<span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
+								<span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top"
 								th:title="#{administration.runtime.configuration.enableChangingUsername.tooltip}"></span>
 							</li>
-							<li class="list-group-item">									
+							<li class="list-group-item">
 								<input id="showDemoDataNavigationEntry" type="checkbox" th:field="*{runtimeSettings.showDemoDataNavigationEntry}"/>
 								<label for="showDemoDataNavigationEntry" th:text="#{administration.runtime.configuration.showDemoDataNavigationEntry}"></label>
-								<span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
+								<span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top"
 								th:title="#{administration.runtime.configuration.showDemoDataNavigationEntry.tooltip}"></span>
 							</li>
-							<li class="list-group-item">								
+							<li class="list-group-item">
 								<input id="changePasswordOnFirstLogin" type="checkbox" th:field="*{runtimeSettings.changePasswordOnFirstLogin}"/>
 								<label for="changePasswordOnFirstLogin" th:text="#{administration.runtime.configuration.changePasswordOnFirstLogin}"></label>
-								<span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
-								th:title="#{administration.runtime.configuration.changePasswordOnFirstLogin.tooltip}"></span>								
+								<span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top"
+								th:title="#{administration.runtime.configuration.changePasswordOnFirstLogin.tooltip}"></span>
 							</li>
 						</ul>
 						<div class="form-group">
@@ -121,7 +121,7 @@
 					<div class="col-xs-12 col-sm-6">
 						<h2 th:text="#{administration.runtime.configuration.joker}"></h2>
 						<div class="row">
-							<div class="col-xs-4">
+							<div class="col-xs-5 col-sm-4">
 								<div class="form-group">
 									<label for="runtimeSettings.jokerMaxCount" th:text="#{administration.runtime.configuration.jokerMaxCount.title} + ':'"></label>
 									<input id="runtimeSettings.jokerMaxCount" type="text" th:field="*{runtimeSettings.jokerMaxCount}" class="form-control" />
@@ -133,7 +133,7 @@
 					<div class="col-xs-12 col-sm-6">
 						<h2 th:text="#{administration.runtime.configuration.imageUploadLimit}"></h2>
 						<div class="row">
-							<div class="col-xs-4">
+							<div class="col-xs-5 col-sm-4">
 								<div class="form-group">
 									<label for="runtimeSettings.imageUploadLimit" th:text="#{administration.runtime.configuration.imageUploadLimit.title} + ':'"></label>
 									<span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top"
@@ -163,11 +163,11 @@
 				</div>
 				<div class="row">
 					<div class="col-xs-12">
-						<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>	
+						<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
 					</div>
 				</div>
 			</form>
-		</div>		
+		</div>
 	</body>
 	<th:block layout:fragment="scripts">
 		<script type="text/javascript" th:src="@{/js/pages/tooltip.js}" charset="UTF-8"></script>
