using bootstrap bundle

--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" th:href="@{/webjars/font-awesome/css/brands.min.css}" />
 		<link rel="stylesheet" th:href="@{/webjars/font-awesome/css/solid.min.css}" />
 		<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
+        <link rel="stylesheet" th:href="@{/webjars/bootstrap-icons/font/bootstrap-icons.css}" />
 <!--		<link rel="stylesheet" th:href="${@runtimeSettingsUtil.getSettings().getBootswatchThemeUrl()}" />-->
 		<link rel="stylesheet" th:href="@{/lightbox/css/lightbox.min.css}" />
 <!--		<link rel="stylesheet" th:href="@{/css/custom.css}" />-->
@@ -21,8 +22,7 @@
 		</div>
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 		<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-		<script type="text/javascript" th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-		<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+        <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
 		<script type="text/javascript" th:src="@{/js/bootstrap-confirmation.min.js}"></script>
 		<script type="text/javascript" th:src="@{/lightbox/js/lightbox.min.js}"></script>
 
