--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -7,16 +7,13 @@
 <body>
 <nav th:fragment="menu" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" th:href="@{/matches/upcoming}">FredBet</a>
+        <a class="navbar-brand" th:href="@{/matches/upcoming}"><i class="fas fa-home"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent" th:if="${@webSecurityUtil.isUserLoggedIn()}">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="navbar-brand" th:href="@{/matches/upcoming}"><span class="fas fa-home"></span></a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/ranking}" th:text="#{navigation.ranking}"></a>
                 </li>
