--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,63 +4,41 @@
 <head>
     <title th:text="#{login.title}"></title>
     <link rel="stylesheet" th:href="@{css/bootstrap-toggle.min.css}"/>
-    <link rel="stylesheet" th:href="@{css/login.css}"/>
 </head>
 <body>
 <div layout:fragment="content">
-    <div id="login">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div th:if="${param.error}" class="alert alert-danger" role="alert"
-                     th:with="errorMsg=${session['SPRING_SECURITY_LAST_EXCEPTION'].message}">
-                    <span th:text="${errorMsg}"></span>
-                </div>
-                <div class="logo text-center">
-                    <i class="fas fa-thumbs-up fa-8x"></i>
-                </div>
-                <div class="modal-header">
-                    <h1 class="text-center" th:text="'FredBet - ' + #{login.title.short}">Welcome</h1>
-                </div>
-                <div class="modal-body">
-                    <form id="login-form" class="form" th:action="@{/login}" method="post">
-                        <div class="form-group">
-                            <input type="text" class="form-control input-lg" name="username"
-                                   th:placeholder="#{login.placeholder.username}"/>
-                        </div>
-
-                        <div class="form-group">
-                            <input type="password" class="form-control input-lg" name="password"
-                                   th:placeholder="#{login.placeholder.password}"/>
-                        </div>
-
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-block btn-lg btn-primary" th:value="#{login.button.login}">
-                                <i class="fas fa-sign-in-alt"></i>&nbsp;<span th:text="#{login.button.login}"></span>
-                            </button>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-8 col-sm-4">
-                                <input id="remember-me" data-toggle="toggle" data-onstyle="success" type="checkbox" name="remember-me"/>
-                                <label for="remember-me">Auto-Login</label>
-                                <span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip"
-                                      data-placement="top" th:title="#{login.autologin.tooltip}"></span>
-                            </div>
-                            <div class="col-xs-4 col-sm-2">
-                                <div class="form-group">
-                                    <div th:replace="~{fragments/language_selector :: language_selector('btn btn-default language-button dropdown-toggle')}"></div>
+    <section class="vh-100" style="background-color: #508bfc;">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                    <div class="card shadow-2-strong" style="border-radius: 1rem;">
+                        <div class="card-body p-5 text-center">
+                            <form id="login-form" class="form" th:action="@{/login}" method="post">
+                                <h3 class="mb-5" th:text="'FredBet - ' + #{login.title.short}">Sign in</h3>
+                                <div data-mdb-input-init class="form-outline mb-4">
+                                    <input type="text" id="typeEmailX-2" class="form-control form-control-lg" name="username"/>
+                                    <label class="form-label" for="typeEmailX-2">Email</label>
                                 </div>
-                            </div>
-                            <div class="col-xs-12 col-sm-6">
-                                <div class="form-group">
-                                    <a th:if="${@runtimeSettingsUtil.getSettings().isSelfRegistrationEnabled()}" href="#" class="btn btn-default" th:href="@{/registration}" th:text="#{registration.link.text}"></a>
+
+                                <div data-mdb-input-init class="form-outline mb-4">
+                                    <input type="password" id="typePasswordX-2" class="form-control form-control-lg" name="password"/>
+                                    <label class="form-label" for="typePasswordX-2">Password</label>
                                 </div>
-                            </div>
+
+                                <!-- Checkbox -->
+                                <div class="form-check d-flex justify-content-start mb-4">
+                                    <input class="form-check-input" type="checkbox" value="" id="form1Example3" />
+                                    <label class="form-check-label" for="form1Example3"> Remember password </label>
+                                </div>
+
+                                <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+                            </form>
                         </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 </div>
 </body>
 <th:block layout:fragment="scripts">
